<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/parent_layout_padding">

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="@dimen/size_18" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/parent_layout_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="What Are You Looking For ?"
                android:textColor="@color/black"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/drFinder"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_8"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/meetDrImage"
                            android:layout_width="80sp"
                            android:layout_height="80sp"
                            android:layout_centerHorizontal="true"
                            android:padding="@dimen/size_4"
                            android:src="@drawable/stscope" />

                        <TextView
                            android:id="@+id/meetDRTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/meetDrImage"
                            android:text="@string/meetDr"
                            android:textAlignment="center"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/meetDRTxt"
                            android:layout_marginTop="@dimen/size_1"
                            android:text="@string/bookApointment"
                            android:textAlignment="center" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/pharmacyCard"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_8"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imagePills"
                            android:layout_width="80sp"
                            android:layout_height="80sp"
                            android:layout_centerHorizontal="true"
                            android:padding="@dimen/size_4"
                            android:src="@drawable/pills" />

                        <TextView
                            android:id="@+id/imagePillsTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imagePills"
                            android:text="@string/Pharmacy"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imagePillsTxt"
                            android:layout_marginTop="@dimen/size_1"
                            android:text="@string/expolreMEd"
                            android:textAlignment="center" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/pathLabCard"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_8"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/pathImage"
                            android:layout_width="80sp"
                            android:layout_height="80sp"
                            android:layout_centerHorizontal="true"
                            android:padding="@dimen/size_4"
                            android:src="@drawable/labs" />

                        <TextView
                            android:id="@+id/pathTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/pathImage"
                            android:text="@string/path"
                            android:textAlignment="center"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/pathTxt"
                            android:layout_marginTop="@dimen/size_1"
                            android:text="@string/path_lab"
                            android:textAlignment="center" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/hospitalFinder"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_8"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imagePills1"
                            android:layout_width="80sp"
                            android:layout_height="80sp"
                            android:layout_centerHorizontal="true"
                            android:padding="@dimen/size_4"
                            android:src="@drawable/hospitalb" />

                        <TextView
                            android:id="@+id/imagePillsTxt1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imagePills1"
                            android:text="@string/hospital"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imagePillsTxt1"
                            android:layout_marginTop="@dimen/size_1"
                            android:text="@string/exploreh"
                            android:textAlignment="center" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_1" />

            <LinearLayout
                android:id="@+id/dr_types_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/find"
                        android:textColor="@color/black"
                        android:textSize="@dimen/size_16"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/viewAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/viewAll"
                        android:textColor="@color/colorPrimaryDark"
                        android:theme="@style/FlatButton" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dr_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:clipToPadding="true"
                    android:padding="@dimen/size_4">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>